# weather.gov

./: .cfignore  .dir-locals.el  .eslintrc.js  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .prettierignore  .prettierrc.json  .stylelintrc.js  CHANGELOG.md  CONTRIBUTING.md  DJANGO_6_UPGRADE_PLAN.md  Dockerfile  Dockerfile.dev  Dockerfile.golang  Dockerfile.libretranslate  Dockerfile.node  Dockerfile.node.ci  Dockerfile.plantuml  Dockerfile.plantuml.dev  Dockerfile.playwright  Dockerfile.playwright.ci  Dockerfile.prod  Dockerfile.uswds  Dockerfile.uswds.dev  Dockerfile.utility-node  Makefile  README.md  api-timings.js  apt.yml  bootstrap.sh  circle.js  composer.json  criteria.md  cronish.sh  cypress.config.js  debug_output.html  debug_output_2.html  debug_output_3.html  (+32 more)
forecast/: .flake8  Dockerfile  Dockerfile.ci  Dockerfile.dev  apt.yml  debug_settings.py  dynamic_safety_info_dump.json  gunicorn.conf.py  load-data.sh  manage.py  newrelic.ini  pyproject.toml  requirements.dev.txt  requirements.txt  run.sh  runtime.txt  tracing.py
forecast/backend/: admin.py  apps.py  context_processors.py  dynamic_safety_info_dump.json  exceptions.py  forms.py  interop.py  middleware.py  models.py  url_converters.py  urls.py  util.py  views.py  wagtail_hooks.py  wfo_model_dump.json
forecast/backend/config/: asgi.py  settings.py  urls.py  wsgi.py
forecast/backend/county/: views.py
forecast/backend/fixtures/: ghwo_metadata.json
forecast/backend/migrations/: 0001_initial.py  0002_dynamicsafetyinformation_alter_wfo_region.py  0003_alter_wfo_region.py  0004_wfo_about_wfo_address_wfo_email_wfo_facebook_and_more.py  0005_load_initial_wfo_data.py  0006_load_initial_dynamic_safety_info_data.py  0007_noaauser.py  0007_remove_noaauser_uid_alter_noaauser_email.py  0008_add_generic_wagtail_page.py  0008_update_dynamic_safety_info.py  0009_update_dynamic_safety_info.py  0010_wfo_ghwo_metadata.py  0011_update_ghwo_metadata_from_fixture.py  0012_add_roadmap_page_content_type.py  0013_make_dynamicsafetyinformation_rich_text.py  0014_remove_wfo_ghwo_metadata_and_more.py  0015_add_custom_meta_description_to_pages.py  0016_add_delivered_flag_to_roadmap_items.py  0017_default_roadmap_entry_delivery_date_to_none.py  0018_alter_roadmapentry_delivery_date.py
forecast/backend/models/: __init__.py  auth.py  managed_metadata.py  org_structure.py  pages.py  roadmap.py
forecast/backend/templates/: 500.html  llms.txt  robots.txt
forecast/backend/templatetags/: get_setting.py  util.py  weather_i18n.py  weather_partials.py  weather_title.py
forecast/backend/tests/: repro_issue.py  test_429_middleware.py  test_alert_util.py  test_county_views.py  test_county_views_briefings.py  test_county_views_weather_stories.py  test_django6_upgrade.py  test_exception_middleware.py  test_ghwo_processing.py  test_interop.py  test_interop_astronomical_data.py  test_location_search_views.py  test_models.py  test_region_model.py  test_risk_views.py  test_roadmap_models.py  test_site_navigation.py  test_site_pages.py  test_state_views.py  test_templatetags_utils.py  test_templatetags_weather_title.py  test_url_converters.py  test_urls.py  test_util_county.py  test_util_nwsconnect.py  test_views.py  test_weather_i18n.py  test_weather_partials.py  test_wfo_model.py
forecast/backend/util/: __init__.py  alert.py  county.py  nwsconnect.py  state.py
forecast/backend/views/: _helpers.py  county.py  errors.py  index.py  location_search.py  offices.py  partials.py  point.py  risk.py  state.py  static.py
forecast/frontend/: .prettierignore  README.md  package-lock.json  package.json
forecast/frontend/assets/: .htaccess  manifest.json
forecast/noaa_saml/: README.md  apps.py  auth.py  config.py  urls.py  utils.py  views.py
forecast/noaa_saml/templates/: saml_errors.html
forecast/noaa_saml/tests/: test_noaa_backend.py  test_saml_views.py
forecast/spatial/: apps.py  models.py  sitemaps.py
forecast/spatial/migrations/: 0001_initial.py  0001_squashed_0008_alter_weatheralertscache_alertkind_and_more.py  0002_weatherplace.py  0003_alter_weatherplace_table.py  0004_weathercounties.py  0005_weatherstates.py  0006_weathercountywarningareas.py  0007_weatheralertscache.py  0008_alter_weatheralertscache_alertkind_and_more.py  0019_alter_weatheralertscache_table_and_more.py  0020_alter_weatheralertscache_alertjson.py  0021_install_fuzzystrmatch_extension_20251007_1919.py  0022_weatherspatialmetadata.py  0023_initial_spatial_metadata.py  0024_alter_weathercounties_state.py  0025_weatheralertscache_counties_and_more.py  0026_add_primary_wfo_to_county.py  0027_fix_honolulu_timezone.py  0028_weathercounties_countyfips_as_unique_and_index.py  0029_store_alert_simplified_geometry_separately.py  0030_truncate_alert_cache.py  0031_forecastgridpoints_forecastgridlog.py  0032_forecastgridheatindex.py  0033_add_county_counts_and_timezones.py  0034_alter_weatherstates_county_count_weathergridpoints.py  0035_weathergridpoints_is_marine_weathergridpoints_type_and_more.py  0036_alter_weathergridpoints_is_marine_and_more.py  0037_weatherzone_wfo.py  0038_alter_weathergridpoints_is_marine.py  0039_add_county_slug.py  0040_add_spatial_geography_index.py  0041_add_alerts_geography_index.py  0042_weatherzone_name.py  0043_wpcprobabilisticprecip.py
forecast/wx_stories_api/: README.md  admin.py  apps.py  json.py  middleware.py  models.py  urls.py  util.py  views.py  wagtail_hooks.py
forecast/wx_stories_api/migrations/: 0001_initial.py  0002_situation_report_delete_description.py  0003_remove_situationreport_wfo_delete_temporaryimage_and_more.py
forecast/wx_stories_api/responses/: __init__.py  file_upload.py  situation_report.py  weather_story.py
forecast/wx_stories_api/tests/: test_models.py  test_urls.py  test_util.py  (+1 more)
(+3438 files in other folders)
